# kadena-cli-wallet

./: Cargo.toml
src/: cli.yml  cmds.rs  main.rs
src/cmds/: gen_keypair.rs
