[package]
name = "kadena-cli-wallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
hex = "0.4.3"